@@ -23,6 +23,12 @@ class HtConfiguration : public Configuration
     int		Value(URL *aUrl,char *value,int default_value = 0);
     double	Double(URL *aUrl,char *value,double default_value = 0);
     int		Boolean(URL *aUrl,char *value,int default_value = 0);
+
+    //
+    // We need some way of reading in the database from a configuration file
+    // ... this uses the parser
+    virtual int         Read(const String& filename);
+
  protected:
     Dictionary          dcServers;
     Dictionary          dcUrls;
